# goban

./: CMakeLists.txt  README.md
camera/: .gitignore  camera.py  dataset.csv  features.py  find_board.py  main.py  scan.py  train.py
engine/include/: controller.h
engine/src/: board.cpp  main.cpp
engine/tests/: CMakeLists.txt  test_main.cpp
gui/: main.py
include/: board.h  controller.h
src/: board.cpp  main.cpp
tests/: test_main.cpp
